# SimSaber

./: AccuracyCalculator.py  Bsor.py  Geometry.py  NoteCutter.py  README.md  Saber.py  SaberMovementData.py  SaberSwingRating.py  SaberSwingRatingCounter.py  TODO.txt  Vector3.py  calculateScore.py  cutEvent.py  geometry.py  interpretMapFiles.py  main.ipynb  main.py  noteManager.py  noteMovement.py  noteMovementTest.py  pyproject.toml  saberMovementBuffer.py  sample.bsor  scoreManager.py  starter.py  testMovement.py  testQuat.py  testRotation.py  test_all.py  test_main.py  typeDefs.py
2b69a (As It Was - Taddus)/: song.egg
generatedReplays/: 102-Expert-Standard-85ED6A233B87576D8A101927AB4AC10B6A0B74F4.bsor  102-Hard-Standard-28547D0245F0FEF153A5F4C96BB3B4F91A9D0AB8.bsor  11136-Expert-Standard-696113C37609449E94D6B0F33A7E2AC28FAF73C7.bsor  76561198059961776-ExpertPlus-Standard-67B7AE187626B78F5C6EEAAE0C78FA5B2C61D2CA.bsor  76561198157672038-ExpertPlus-Standard-C1CB957445C5BD92A8B4FEF3A2F9B99A7F775C0F.bsor  76561198180044686-Expert-Standard-884E2D9A82F5675DE7C3FA35199EBF24C4F15D23.bsor  76561198410971373-ExpertPlus-Standard-BB9694E3D486B65629F96300B54CCD4AA93FE688.bsor  76561198870496143-ExpertPlus-Standard-D84A2F98A332036452ECFD407BFBCF2EFC2BCAE7.bsor  generatedwithscore.bsor
generatedReplays/19b46 (Knees - Tranch)/: song.egg
geometry/: __init__.py  geometry.py  tests.py
main/: __init__.py  cutEvent.py  driver.py  noteManager.py  saberMovementBuffer.py  scoreManager.py
noteMotion/: __init__.py  noteMovement.py  tests.py
replays/: 6408746.bsor
(+14710 files in other folders)
